--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <p class="mt-4">
                     Cada presentación crea una atmósfera bohemia, intensa y emocional.
                 </p>
-                <a href="https://wa.me/520000000000" target="_blank" class="btn btn-gold mt-3">Contratar Show</a>
+                <a href="https://wa.link/uiqfb7" target="_blank" class="btn btn-gold mt-3">Contratar Show</a>
             </div>
         </div>
     </div>
@@ -146,7 +146,7 @@
 </div>
 
 <!-- WHATSAPP BUTTON -->
-<a href="https://wa.me/520000000000" class="whatsapp-float" target="_blank">
+<a href="https://wa.link/uiqfb7" class="whatsapp-float" target="_blank">
     <img src="img/whatsapp.png" alt="" height="40">
 </a>
 
