--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
         <div class="row g-4">
 
             <div class="col-md-3" data-aos="zoom-in">
-                <div class="video-card" onclick="openVideo('videos/IWantIt.mp4')">
+                <div class="video-card" onclick="openVideo('https://youtu.be/ip9T83TlfUQ')">
                     <img src="img/thumb/iwanit.png" class="img-fluid rounded">
                     <div class="overlay">I Want It That Way - Backstreet Boys</div>
                 </div>
             </div>
 
             <div class="col-md-3" data-aos="zoom-in">
-                <div class="video-card" onclick="openVideo('videos/Losing.mp4')">
+                <div class="video-card" onclick="openVideo('https://youtu.be/8zO3Ne8t_64')">
                     <img src="img/thumb/losing.png" class="img-fluid rounded">
                     <div class="overlay">Losing My Religion - R.E.M</div>
                 </div>
             </div>
 
             <div class="col-md-3" data-aos="zoom-in">
-                <div class="video-card" onclick="openVideo('videos/MilDemonios.mp4')">
+                <div class="video-card" onclick="openVideo('https://youtu.be/ZW4v1XIEwq4')">
                     <img src="img/thumb/mildemonios.png" class="img-fluid rounded">
                     <div class="overlay">Mil Demonios - Moderatto</div>
                 </div>
             </div>
 
             <div class="col-md-3" data-aos="zoom-in">
-                <div class="video-card" onclick="openVideo('videos/Mori.mp4')">
+                <div class="video-card" onclick="openVideo('https://youtu.be/pbdYCbkoHAs')">
                     <img src="img/thumb/mori.png" class="img-fluid rounded">
                     <div class="overlay">Mori - Tranzas</div>
                 </div>
