--- a/index.html
+++ b/index.html
@@ -70,30 +70,31 @@
     <div class="container">
         <h2 class="text-center section-covers mb-5" data-aos="fade-right">COVERS</h2>
         <div class="row g-4">
+            
 
             <div class="col-md-3" data-aos="zoom-in">
-                <div class="video-card" onclick="openVideo('https://youtu.be/ip9T83TlfUQ')">
+                <div class="video-card" onclick="openVideo('https://www.youtube.com/embed/ip9T83TlfUQ?si=VQFvkByV__NZ7VCA')">
                     <img src="img/thumb/iwanit.png" class="img-fluid rounded">
                     <div class="overlay">I Want It That Way - Backstreet Boys</div>
                 </div>
             </div>
 
             <div class="col-md-3" data-aos="zoom-in">
-                <div class="video-card" onclick="openVideo('https://youtu.be/8zO3Ne8t_64')">
+                <div class="video-card" onclick="openVideo('https://www.youtube.com/embed/8zO3Ne8t_64?si=YUsf-cNTsKpAyu-W')">
                     <img src="img/thumb/losing.png" class="img-fluid rounded">
                     <div class="overlay">Losing My Religion - R.E.M</div>
                 </div>
             </div>
 
             <div class="col-md-3" data-aos="zoom-in">
-                <div class="video-card" onclick="openVideo('https://youtu.be/ZW4v1XIEwq4')">
+                <div class="video-card" onclick="openVideo('https://www.youtube.com/embed/ZW4v1XIEwq4?si=cGHkoDG2iwmdko_l')">
                     <img src="img/thumb/mildemonios.png" class="img-fluid rounded">
                     <div class="overlay">Mil Demonios - Moderatto</div>
                 </div>
             </div>
 
             <div class="col-md-3" data-aos="zoom-in">
-                <div class="video-card" onclick="openVideo('https://youtu.be/pbdYCbkoHAs')">
+                <div class="video-card" onclick="openVideo('https://www.youtube.com/embed/pbdYCbkoHAs?si=AcBd4pQRMOxMUFO7')">
                     <img src="img/thumb/mori.png" class="img-fluid rounded">
                     <div class="overlay">Mori - Tranzas</div>
                 </div>
