--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <meta name="author" content="Midnight Strings">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Midnight Strings | Rock Acústico">
+    <meta property="og:title" content="Midnight Strings | Rock & Pop Acústico">
     <meta property="og:description" content="Rock acústico con alma y atmósfera íntima.">
-    <meta property="og:image" content="img/logomadera.png">
+    <meta property="og:image" content="img/background1.jpg">
 
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
